# ccdata_handler

./: .coverage  .env.example  .gitignore  README.md  README_UNIFIED_INGESTION.md  database_schema.md  exchange_ingestion_implementation_plan.md  instrument_exchange_mapping_plan.md  pyproject.toml  spot_ingestion_plan.md  test_results_20250626_230138.json  test_results_20250626_232042.json  test_results_20250626_232443.json
docs/: data_ingestion_project_summary.md  data_ingestion_technical_guidelines.md  phase3_implementation_summary.md
references/data_api/: asset_api_spec.md  ccdata_asset_api_lines.txt  ccdata_spot_api_lines.txt  data_api_spec.md  derivatives_indices_api_spec.md  futures_api_spec.md  indices_ref_rates_api_spec.md  news_api_spec.md  onchain_core_api_spec.md  onchain_dex_api_spec.md  options_api_spec.md  overview_api_spec.md  spot_api_spec.md  uni-usd-ohlc_response.json  utilities_api_spec.md
references/min_api/: blockchain_data_api_spec.md  ccdata_min_api_spec.md  general_info_api_spec.md  helper_endpoints_api_spec.md  historical_api_spec.md  index_api_spec.md  news_api_spec.md  order_book_api_spec.md  pair_mapping_api_spec.md  price_api_spec.md  social_data_api_spec.md  toplists_api_spec.md  trading_signals_api_spec.md
scheduling/: ingest_asset_coin_uid_map.sh  ingest_asset_data.sh  ingest_exchanges_general.sh  ingest_futures_exchange_instrument_data.sh  ingest_ohlcv_indices_1d_top_assets.sh  ingest_ohlcv_spot_1d_top_pairs.sh  ingest_spot_exchange_instrument_data.sh
scripts/: asset_to_coin_uid_mapper.py  basic_websocket.py  batch_config_example.json  bulk_transfer_futures_funding_rate_parquet.py  bulk_transfer_futures_ohlcv_parquet.py  bulk_transfer_futures_open_interest_parquet.py  ingest_asset_data.py  ingest_asset_data_v2.py  ingest_daily_ohlcv_spot_data.py  ingest_exchanges_general.py  ingest_exchanges_general_v2.py  ingest_funding_rate_futures_1d.py  ingest_funding_rate_futures_1h.py  ingest_funding_rate_futures_1m.py  ingest_futures_data.py  ingest_futures_exchange_instrument_data.py  ingest_ohlcv_futures_1d.py  ingest_ohlcv_futures_1h.py  ingest_ohlcv_futures_1m.py  ingest_ohlcv_indices_1d_top_assets.py  ingest_ohlcv_indices_1d_top_assets_v2.py  ingest_ohlcv_spot_1d_top_pairs.py  ingest_ohlcv_spot_1d_top_pairs_v2.py  ingest_open_interest_futures_1d.py  ingest_open_interest_futures_1h.py  ingest_open_interest_futures_1m.py  ingest_spot_exchange_instrument_data.py  migrate_ingestion_script.py  performance_benchmark.py  test_unified_framework.py  unified_ingest.py  validate_migration.py
sql/: alter_ohlcv_spot_1d_raw_timestamps.sql  create_schema.sql  get_all_futures_exchanges.sql  get_futures_instruments.sql  get_futures_instruments_funding_rate.sql  get_futures_instruments_open_interest.sql  get_qualified_exchanges.sql  get_top_assets.sql  get_trading_pairs.sql
src/: base_api_client.py  logger_config.py  min_api_client.py  polars_schemas.py  rate_limit_tracker.py  utils.py
src/data_api/: asset_api_client.py  derivatives_indices_api_client.py  futures_api_client.py  indices_ref_rates_api_client.py  news_api_client.py  onchain_core_api_client.py  onchain_dex_api_client.py  options_api_client.py  overview_api_client.py  spot_api_client.py  utilities_api_client.py
src/db/: connection.py  utils.py
src/ingestion/: __init__.py  async_db.py  base.py  cache.py  config.py  futures_ingestor.py  monitoring.py  utils.py
src/ingestion/ingestors/: __init__.py  asset_metadata_ingestor.py  exchange_metadata_ingestor.py  futures_data_ingestor.py  indices_ohlcv_ingestor.py  instrument_metadata_ingestor.py  spot_ohlcv_ingestor.py
src/min_api/: blockchain_data_api_client.py  general_info_api_client.py  helper_endpoints_api_client.py  historical_api_client.py  index_api_client.py  news_api_client.py  order_book_api_client.py  pair_mapping_api_client.py  price_api_client.py  social_data_api_client.py  toplists_api_client.py  trading_signals_api_client.py
tests/: __init__.py
tests/ingestion/: __init__.py  conftest.py  test_async_db.py  test_base.py  test_cache.py  test_config.py  test_monitoring.py  test_utils.py
