[project]
name = "ccdata_handler"
version = "0.1.0"
description = "A data handler for CryptoCompare data"
dependencies = [
    "requests",
    "python-dotenv",
    "tenacity",
    "singlestoredb",
    "polars",
    "connectorx>=0.3.3",
    "pyarrow>=20.0.0",
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
# Configuration for uv, if any specific settings are needed